Closes #2542 - Add number of comments to the tasks